--- a/Azul/Azul.csproj
+++ b/Azul/Azul.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Factory.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Lobby.cs" />
+    <Compile Include="Model.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
